# fedmaq-experiments

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTEXT.md  HANDOFF.md  README.md  experiment_log.csv  experiment_log.jsonl  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/commands/: add-baseline.md  align-manuscript.md  run-benchmark.md
.claude/project/: baseline_registry.md  changelog.md  env_vars.md  experiment_registry.md  workspace_map.md
.claude/rules/: ablation-phases.md  agent-delegation.md  agent-memory.md  baselines.md  datasets-simulation.md  docs-management.md  evaluation-metrics.md  flower-patterns.md  hydra-config.md  manuscript-alignment.md  project-overview.md  repo-preferences.md  (+1 more)
conf/: config.yaml
docs/: DECISIONS.md  STATUS.md
scripts/: analysis.py  common.py  golden_diff.py  run.py  run_baselines_smoke.py  run_benchmark_grid.py  run_ema_sweep.py  run_fedmaq_normal_no_ema_50r.py  run_femnist_grid.py  run_formulation_ablation.py  run_kd_baselines_smoke.py  run_kd_reg_sweep.py  run_matrix.py  run_mobilenetv2_smoke.py  run_pass2_explore.py  run_pass2_explore_resume.py  run_resnet18_fedmaq.py  run_smoke_test.py  run_soft_voting_explore.py  run_soft_voting_explore_resume.py  run_soft_voting_sweep.py  run_stacked_reg_sweep.py
tests/: conftest.py  test_analysis.py  test_cfd.py  test_client_manager.py  test_config_defaults.py  test_environment.py  test_fedkd_compression.py  test_models.py  test_package_import.py  test_postprocess.py  test_refinement_features.py  test_simulation.py  test_telemetry.py  test_timing_golden.py
(+135 files in other folders)
