[project]
name = "fedmaq"
version = "0.1.0"
description = "FedMAQ: communication-efficient federated learning experiments"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flwr[simulation]>=1.31.0",
    "hydra-core>=1.3.3",
    "matplotlib>=3.11.0",
    "omegaconf>=2.3.1",
    "seaborn>=0.13.2",
    "torch==2.12.1+cu132",
    "torchvision==0.27.1+cu132",
    "wandb>=0.28.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.19",
    "scikit-learn>=1.9.0",
]

[project.scripts]
fedmaq = "fedmaq.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fedmaq"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.flwr.app]
publisher = "fedmaq"
flwr-version-target = "1.31.0"

[tool.pytest.ini_options]
testpaths = ["tests"]

[[tool.uv.index]]
name = "pytorch-cu132"
url = "https://download.pytorch.org/whl/cu132"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu132" }
torchvision = { index = "pytorch-cu132" }
